--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  background-color: #18181b;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.nav-item {
+  cursor: pointer
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
 }
